Tab-bot front_end

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>TABBOT Agency</title>
+    <title>TaB-bot</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">TABBOT</a>
+                <a class="navbar-brand page-scroll" href="#page-top">TaB-bot</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -52,6 +52,7 @@
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
+
                 </ul>
             </div>
             
@@ -61,9 +62,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our TABBOT!</div>
-                <div class="intro-heading">Tabbot is our friend.</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-heading">I THINK WE SHOULD<br> TAKE A BREAK</div>
+                <div class="intro-lead-in">(it's not you, it's me)</div>
+                <a href="#services" class="page-scroll btn btn-xl">Download</a>
             </div>
         </div>
     </header>
@@ -73,33 +74,24 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Features</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Meet your new best friend!</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Do nothing</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <img src= "img/slacklogo.png" height="200px", width= "200px">
+                    <h4 class="service-heading">Seamlessly integrated with Slack</h4>
+                    <p class="text-muted"></p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Interests</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <img src= "img/clock.png" height="200px", width= "200px">
+                    <h4 class="service-heading">Set customizable work and break intervals</h4>
+                    <p class="text-muted"></p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Group activity</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <img src= "img/coffeecups.png" height="200px", width= "200px">
+                    <h4 class="service-heading">Team-based notifications</h4>
+                    <p class="text-muted"></p>
                 </div>
             </div>
         </div>
@@ -109,60 +101,36 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Our Team</h2>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/david.jpeg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/david.png" height="300px" width="270px">
                         <h4>David Haley</h4>
-                        <p class="text-muted">Back-end Developer</p>
-                        <!-- <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul> -->
+                        <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/lina.jpeg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/lina.png" height="300px" width="270px">
                         <h4>Lina Kim</h4>
-                        <p class="text-muted">Front-end Developer</p>
-                        <!-- <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul> -->
+                        <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/katie.jpeg" class="img-responsive img-circle" alt="">
-                        <h4>Katelyn Atherholt</h4>
-                        <p class="text-muted">Designer</p>
-                        <!-- <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul> -->
+                        <img src="img/team/katy.png" height="300px" width="270px">
+                        <h4>Katy Atherholt</h4>
+                        <p class="text-muted"></p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted"></p>
                 </div>
             </div>
         </div>
@@ -171,7 +139,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-12">
                     <span class="copyright">Copyright &copy; TABBOT 2016</span>
                 </div>
             </div>
